--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
     zipAfterPublish: true
 
 - task: WhiteSource Bolt@19
-  displayName: 'Run WhiteSource Bolt'
+  displayName: 'WhiteSource Bolt'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
